[package]
name = "dbg-ranges"
version = "0.1.1"
edition = "2021"
description = "Helps with debug formatting lists of items that have many sequential items"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sivadeilra/dbg-ranges"

[dependencies]
